...
    return Scaffold(
      appBar: AppBar(
        title: const Text('Risultati'),
        centerTitle: true,
        actions: [
          IconButton(
            key: const Key('Preference test key'),
            onPressed: () async {
              String name = await showInputAlertDialog(context,
                  title: 'Inserisci un nome per la preferenza');

              if (name != '') {
                _logger.info('Nome selezionato $name}');
...
                      ),
                    ],
                  ),
                  Container(
                    padding: const EdgeInsets.only(top: 10.0, bottom: 30.0),
                    child: BigElevatedButton(
                      key: const Key('Continue shopping test key'),
                      onPressed: () =>
                          Navigator.popUntil(context, (route) => route.isFirst),
                      child: Text(
                        'Continua lo shopping'.toUpperCase(),
                      ),
                    ),
...
