...
                    maxLength: 20,
                    maxLines: 1,
                  ),
                ),
                actions: <Widget>[
                  TextButton(
                    key: const Key('Save preference test key'),
                    onPressed: () {
                      if (textEditingController.text.isNotEmpty) {
                        Navigator.of(context).pop();
                      }
                    },
                    child: const Padding(
...
