...
                    .changePreferenceName(selectedPreferenceId, name);
              }
            },
            icon: const Icon(Icons.mode_outlined),
          ),
          IconButton(
            key: const Key("Delete preference test key"),
            onPressed: () {
              Provider.of<UserDataProvider>(context, listen: false)
                  .removePreference(selectedPreferenceId);
              Navigator.pop(context);
            },
            icon: const Icon(Icons.delete_outline),
...
