...
    return Scaffold(
      appBar: AppBar(
        title:
            user != null ? Text('${user.name} ${user.surname}') : Container(),
        centerTitle: true,
        leading: IconButton(
          key: const Key('Back test key'),
          onPressed: () => Navigator.of(context).pop(),
          icon: const Icon(Icons.arrow_back_ios),
        ),
      ),
      body: SafeArea(
        child: user == null
...
                  crossAxisAlignment: CrossAxisAlignment.start,
                  children: [
                    const SizedBox(
                      height: 10.0,
                    ),
                    InkWell(
                      key: const Key('Update profile test key'),
                      onTap: () =>
                          Navigator.pushNamed(context, '/updateprofile'),
                      child: Container(
                        padding: OptiShopAppTheme.defaultPagePadding,
                        height: containerHeight,
                        child: Row(
...
