...
                      child: Column(
                        mainAxisAlignment: MainAxisAlignment.start,
                        crossAxisAlignment: CrossAxisAlignment.start,
                        children: [
                          const SizedBox(height: 20.0),
                          TextFormField(
                              key: const Key('Name test key'),
                              controller: _nameController,
                              decoration: const InputDecoration(
                                border: UnderlineInputBorder(),
                                labelText: 'Nome',
                                counterText: '',
                                errorMaxLines: 4,
...
                                } else {
                                  return null;
                                }
                              }),
                          const SizedBox(height: 20.0),
                          TextFormField(
                              key: const Key('Surname test key'),
                              controller: _surnameController,
                              decoration: const InputDecoration(
                                border: UnderlineInputBorder(),
                                labelText: 'Cognome',
                                counterText: '',
                                errorMaxLines: 4,
...
