...
                          child: const Text('Registrati'),
                        ),
                        const SizedBox(
                          height: 30.0,
                        ),
                        BigOutlinedButton(
                          key: const Key('Signin test key'),
                          onPressed: () => {
                            Navigator.of(context).restorablePushNamed('/signin')
                          },
                          child: const Text('Accedi'),
                        ),
                      ],
...
